nobody uses JSVC aka commons.daemon, remove support for it